fixes favicon, table styles, title, chart format, font - added favicon - tweaked table byte styles - fixed table horizontal scrolling - page title -> "Cockroach Console" - chart number format fixes - remove google font

--- a/ui/styl/partials/table.styl
+++ b/ui/styl/partials/table.styl
@@ -29,7 +29,7 @@ $stats-table-tr--bg-alt = $secondary-gray-7
 
 // ---- Data table ----
 .stats-table, .sql-table
-  color -color('dark')
+  overflow scroll
   table
     border-collapse collapse
     margin-bottom 2rem
@@ -86,6 +86,8 @@ $stats-table-tr--bg-alt = $secondary-gray-7
       color $main-navy
       font-size 19px
       padding-top 0
+      .units
+        font-size 15px
 
     &.sorted
       &:after
@@ -100,6 +102,8 @@ $stats-table-tr--bg-alt = $secondary-gray-7
     font-size 16px
     letter-spacing .33px
     white-space nowrap
+    .units
+      font-size 12px
 
   td
   th
