--- a/ui/styl/partials/typography.styl
+++ b/ui/styl/partials/typography.styl
@@ -48,7 +48,7 @@ html
 body
   line-height 2rem
   font-size $font-base-size
-  font-family 'Source Sans Pro', 'Helvetica Neue', Helvetica, sans-serif
+  font-family Lato-Medium
   font-weight 400
 
 h1
